platform/chrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: chrome
  labels:
    app: chrome
spec:
  selector:
    app: chrome
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: ws
      port: 8082
      targetPort: ws
