platform/chrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrome
  namespace: chrome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - chrome.initio.cc
      secretName: initio-cc-tls
  rules:
    - host: chrome.initio.cc
      http:
        paths:
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: chrome
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chrome
                port:
                  number: 3000
